# hue-cleaner

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
release/win/: hue Cleaner_1.0.0_x64_en-US.msi
src/: App.css  App.jsx  Components.jsx  Context.jsx  main.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: setupTests.js  utils.spec.js
